# kafkakitty

./: Cargo.toml  README.adoc  Rocket.toml  docker-compose.yml  index.html  package-lock.json  package.json
assets/: index.html  main.js
assets/static/css/: app.2968d14daa71ab7fa8c41b79e51779cc.css  app.2968d14daa71ab7fa8c41b79e51779cc.css.map
assets/static/js/: app.c8a86260ac658c630fef.js  app.c8a86260ac658c630fef.js.map  manifest.2ae2e69a05c33dfc65f8.js.map
config/: index.js
frontend/: App.vue  main.js
frontend/components/: Kitty.vue  Message.vue
src/: kafka.rs  main.rs  routes.rs  websocket.rs
static/: sock.js
