[package]
name = "kafkakitty"
version = "0.1.0"
authors = ["R. Tyler Croy <rtyler@brokenco.de>"]
edition = "2018"

[dependencies]
rocket = "~0.4.2"
# Used for embedding templates
rust-embed = "~5.1.0"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["handlebars_templates"]

[dependencies.rdkafka]
version = "~0.20.0"
features = ["ssl", "sasl"]
