[package]
name = "kafkakitty"
version = "0.3.0"
authors = ["R. Tyler Croy <rtyler@brokenco.de>"]
edition = "2018"

[dependencies]
# Necessary for parsing command line arguments
clap = "~2.18.0"
# Necessary for passing messages from Kafka to multiple channels
crossbeam = "~0.7.3"
# Need to pin to an older futures to ensure that our consumer will compile
# See <https://github.com/fede1024/rust-rdkafka/issues/180?
futures = "0.1.21"
log = "~0.4.8"
# Used for opening URLs automatically
open = "~1.3.2"
rocket = "~0.4.2"
# Used for embedding templates
rust-embed = "~6.3.0"
# Needed to serialize JSON for the frontend
serde = { version = "~1.0", features = ["derive"] }
serde_json = "~1.0"
tungstenite = "~0.9.2"

[dependencies.rdkafka]
git = "https://github.com/fede1024/rust-rdkafka"
branch = "master"
features = ["ssl", "sasl"]
